fixed problem with navbar collaps menu to be responsive and to get fitting background after clicking on it

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,11 +1,14 @@
 body {
     background-color: grey;
-    margin: 0;
 }
 
 /* navbar styles*/
 #navbar {
     font-family: Poppins, sans-serif;
+    padding: 0;
+}
+
+.navbar .navbar-nav>a {
     height: 95.5px;
 }
 
